--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/Itm.LinkSafeKisiSynchronisation
+/.vs/ProjectEvaluation
